Refactor(Readme.me):Añadidas fotos y explicaciones al manual de usuario